<?xml version="1.0"?>
<package format="3">
  <name>navmap_ros</name>
  <version>0.2.4</version>
  <description>Conversions between navmap_core and ROS messages</description>
  <maintainer email="fmrico@gmail.com">Francisco Martín Rico</maintainer>

  <license>Apache License, Version 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>navmap_core</depend>
  <depend>navmap_ros_interfaces</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_srvs</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
