<?xml version="1.0"?>
<package format="3">
  <name>navmap_ros_interfaces</name>
  <version>0.2.1</version>
  <description>ROS 2 interfaces for NavMap (messages for visualization and layers)</description>
  <maintainer email="fmrico@gmail.com">Francisco Martín Rico</maintainer>
  <license>Apache License, Version 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>builtin_interfaces</depend>
  <depend>std_msgs</depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
